--- a/rentacar_app/static/css/main.css
+++ b/rentacar_app/static/css/main.css
@@ -16,7 +16,8 @@
 }
 
 .navbar {
-    opacity: 1; !important;
+    position: absolute;
+    opacity: 0.5; !important;
     transition: 0.75s ease; !important;
 }
 
@@ -26,7 +27,7 @@
 
 .half-white-on-scroll {
     background-color: white !important;
-    opacity: 0.5; !important;
+    opacity: 1; !important;
 }
 
 
@@ -51,7 +52,7 @@
     padding: 1em 0.7em;
   }
   .navbar {
-    padding: 0;
+    padding: 50px;
   }
   .navbar .navbar-brand {
     padding: 0 0.7em;
@@ -80,12 +81,6 @@
 
 
 
-
-
-body
-{
-
-}
 
 .wrapper
 {
@@ -173,5 +168,94 @@ body
   background-position: center center;
   background-size: cover;
 }
+
+
+
+
+
+
+
+
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 4rem;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 32rem;
+}
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 32rem;
+}
+
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: 400;
+}
+/* rtl:begin:ignore */
+.marketing .col-lg-4 p {
+  margin-right: .75rem;
+  margin-left: .75rem;
+}
+/* rtl:end:ignore */
+
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  /* rtl:remove */
+  letter-spacing: -.05rem;
+}
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem;
+  }
+}
+
 
 
