--- a/rentacar_app/cars/templates/cars/cars_detail.html
+++ b/rentacar_app/cars/templates/cars/cars_detail.html
@@ -15,6 +15,11 @@
   koszt :  {{object.daily_rental_cost}} <br/>
   rok produkcji : {{object.year_of_production}}
 
+        <form method="post">
+            {{ form.as_p }}
+            {% csrf_token %}
+            <p><input type="submit" value="zarezerwój"></p>
+        </form>
   </center>
 
 {% endblock %}
