changes in homepage frontend

--- a/rentacar_app/homepage/templates/homepage/homepage.html
+++ b/rentacar_app/homepage/templates/homepage/homepage.html
@@ -4,9 +4,9 @@
 {% block content %}
 	<div class="parallax">
 		<div class="hero-text">
-		<h1>Pomagamy spełniać marzenia</h1>
-		<p>Bo każdy ma prawo do luksusu</p>
-		<button type="button" class="btn btn-outline-danger">Sprawdź naszą ofertę</button>
+		    <h1 style="text-shadow: 2px 2px #610B0B">Pomagamy spełniać marzenia</h1>
+		    <p style="text-shadow: 2px 2px #610B0B">Bo każdy ma prawo do luksusu</p>
+            <a class="btn btn-outline-danger shadow-p p-3 mb-5 bg-red rounded" style="text-shadow: 2px 2px #2A0A0A" href="http://127.0.0.1:8000/cars" role="button">Sprawdź naszą ofertę</a>
 		</div>
 	</div>
 
