--- a/rentacar_app/templates/base.html
+++ b/rentacar_app/templates/base.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/hero-banner.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-<!--    <link rel="stylesheet" href="{% static 'css/style.css' %}">-->
     <link href="{% static 'cars/styles/style.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'cars/styles/hero-banner.css' %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,400;1,900&display=swap" rel="stylesheet"> <!-- podłącza fonty-->
@@ -51,9 +50,10 @@
 <script src="{% static 'boostrap/js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'js/script.js' %}"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-
+<!--scripts for carousel-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+
 
 </body>
 
