--- a/rentacar_app/user_account/templates/user_account/register.html
+++ b/rentacar_app/user_account/templates/user_account/register.html
@@ -60,10 +60,11 @@
 				</div>
 
 				{% endif %}
+				<div class="row justify-content-center" style="padding-top: 50px">
+					<button class="btn btn-outline-danger shadow-p p-3 mb-5 bg-red rounded" type="submit">Register</button>
+				</div>
 
-				<button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
-
-				</form>
+			</form>
 		  </div>
 		</div>
 
