edited details page

--- a/rentacar_app/user_account/templates/password_reset/password_change.html
+++ b/rentacar_app/user_account/templates/password_reset/password_change.html
@@ -44,7 +44,13 @@
       {% endfor %}
     {% endfor %}
 
-  <button id="id_submit_btn" class="btn btn-lg btn-primary btn-block" type="submit">Update</button>
+
+  <div class="row justify-content-center" style="padding-top: 20px">
+    <button id="id_submit_btn"
+            class="btn btn-outline-danger shadow-p p-3 mb-5 bg-red rounded"
+            style="width: 120px"
+            type="submit">Updat</button>
+  </div>
 </form>
 
 
