--- a/rentacar_app/user_account/templates/user_account/login.html
+++ b/rentacar_app/user_account/templates/user_account/login.html
@@ -53,7 +53,7 @@
 
 				{% endif %}
 
-				<div class="container">
+				<div class="container" style="margin-top: 20px">
 				  <div class="row justify-content-between">
 					<div class="col-4" style="width: 120px !important">
 						<button class="btn btn-outline-danger shadow-p p-3 mb-5 bg-red rounded"
