added booking history tab

--- a/rentacar_app/user_account/templates/user_account/details.html
+++ b/rentacar_app/user_account/templates/user_account/details.html
@@ -224,8 +224,11 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center experience"><span>Edit Experience</span><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Experience</span></div><br>
+            <div class="p-3 py-5 row justify-content-center">
+				<div class="col-4 row justify-content-center" style="width: 100%">
+					<a class="btn btn-outline-danger shadow-p p-3 mb-5 bg-red rounded"
+					   href="#">Bookings</a>
+				</div>
                 <div class="col-md-12"><label class="labels">Experience in Designing</label><input type="text" class="form-control" placeholder="experience" value=""></div> <br>
                 <div class="col-md-12"><label class="labels">Additional Details</label><input type="text" class="form-control" placeholder="additional details" value=""></div>
             </div>
