--- a/rentacar_app/static/css/main.css
+++ b/rentacar_app/static/css/main.css
@@ -254,49 +254,47 @@
 /*
 *
 * ==========================================
-* CLASSES FOR DETAILS PAGE TABS
+* CLASSES FOR PROFILE DETAILS PAGE TABLES
 * ==========================================
 *
 */
-
-.nav-pills-custom .nav-link {
-    color: #aaa;
-    background: #fff;
-    position: relative;
+.form-control:focus {
+    box-shadow: none;
+    border-color: #BA68C8
 }
 
-.nav-pills-custom .nav-link.active {
-    color: #45b649;
-    background: #fff;
+.profile-button {
+    background: rgb(99, 39, 120);
+    box-shadow: none;
+    border: none
 }
 
-
-/* Add indicator arrow for the active tab */
-@media (min-width: 992px) {
-    .nav-pills-custom .nav-link::before {
-        content: '';
-        display: block;
-        border-top: 8px solid transparent;
-        border-left: 10px solid #fff;
-        border-bottom: 8px solid transparent;
-        position: absolute;
-        top: 50%;
-        right: -10px;
-        transform: translateY(-50%);
-        opacity: 0;
-    }
+.profile-button:hover {
+    background: #682773
 }
 
-.nav-pills-custom .nav-link.active::before {
-    opacity: 1;
+.profile-button:focus {
+    background: #682773;
+    box-shadow: none
 }
-/*
-*
-* ==========================================
-* FOR DEMO PURPOSE
-* ==========================================
-*/
-body {
-    min-height: 100vh;
-    background: linear-gradient(to left, #dce35b, #45b649);
+
+.profile-button:active {
+    background: #682773;
+    box-shadow: none
+}
+
+.back:hover {
+    color: #682773;
+    cursor: pointer
+}
+
+.labels {
+    font-size: 11px
+}
+
+.add-experience:hover {
+    background: #BA68C8;
+    color: #fff;
+    cursor: pointer;
+    border: solid 1px #BA68C8
 }
