rezerwacja templatki + poprawiony widok

--- a/rentacar_app/cars/templates/cars/cars.html
+++ b/rentacar_app/cars/templates/cars/cars.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="mt-1 mb-1 spec-1"><span>Moc Silnika: {{car.car_engine_power}} KM </span><span class="dot"></span>
                   <span>Rok: {{car.year_of_production}} </span><span class="dot"></span><span>Typ Silnika: {{car.type_of_car_engine}} </span><span class="dot"></span><br>
-                  <span>Liczba osób: {{car.num_of_passengers}}</span><span class="dot"></span><span>klimatyzacja: {{car.air_conditioner}}<br></span>
+                  <span>Liczba osób: {{car.num_of_passengers}}</span><span class="dot"></span><span>klimatyzacja: {{car.air_conditioner}}<br></span><span>Miejsce: {{car.facility_allocation}}</span><br/>
                </div>
                     <p class="text-justify text-truncate para mb-0">{{ car.note }}<br><br></p>
                 </div>
