--- a/rentacar_app/user_contact/templates/user_contact/contact.html
+++ b/rentacar_app/user_contact/templates/user_contact/contact.html
@@ -22,7 +22,7 @@
         {% endfor %}
 
         <button type="reset" class="btn btn-secondary"> Reset </button>
-        <button type="sybmit" class="btn btn-primary"> Submit </button>
+        <button type="submit" class="btn btn-primary"> Submit </button>
 
     </form>
 </center>
