--- a/rentacar_app/static/css/main.css
+++ b/rentacar_app/static/css/main.css
@@ -257,3 +257,40 @@
 
 
 
+
+/* USER DETAILS PAGE STYLE
+-------------------------------------------------- */
+
+.form-control:focus {
+    box-shadow: none;
+    border-color: #bd1a20
+}
+
+.profile-button {
+    background: rgb(99, 39, 120);
+    box-shadow: none;
+    border: none
+}
+
+.profile-button:hover {
+    background: #682773
+}
+
+.profile-button:focus {
+    background: #682773;
+    box-shadow: none
+}
+
+.profile-button:active {
+    background: #682773;
+    box-shadow: none
+}
+
+.back:hover {
+    color: #682773;
+    cursor: pointer
+}
+
+.labels {
+    font-size: 11px
+}
