--- a/rentacar_app/templates/snippets/navbar.html
+++ b/rentacar_app/templates/snippets/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top py-3 navbar-expand-lg navbar-light bg-light shadow-sm">
      <div class="container-fluid" style="padding-right: 200px; padding-left:200px;">
 
-      <a class="navbar-brand" href="{% url 'home_app:home' %}">
+      <a class="navbar-brand" href="{% url 'homepage' %}">
          RENTACAR<img src="/static/images/logo.png" width="130" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,7 +11,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
          <li class="nav-item">
-           <a class="nav-link" aria-current="page" href="{% url 'home_app:home' %}">Strona Główna</a>
+           <a class="nav-link" aria-current="page" href="{% url 'homepage' %}">Strona Główna</a>
          </li>
          <li class="nav-item">
            <a class="nav-link active" href="{% url 'main_app:cars' %}">Auta</a>
